# prost-dto

./: Cargo.toml  LICENSE  deny.toml
prost-dto-core/: Cargo.toml
prost-dto-core/src/: attributes.rs  enum_codegen.rs  lib.rs  prost_ext.rs  proto_conv.rs  struct_codegen.rs  utils.rs
prost-dto-derive/: Cargo.toml
prost-dto-derive/src/: lib.rs
src/: lib.rs
tests/: from-prost-enum-unit.rs  from-proto-enum-unit.rs  into-prost-enum-unit.rs  into-proto-enum-unit.rs  simple-from-prost-struct.rs  simple-from-proto-struct.rs  simple-into-prost-enum.rs  simple-into-prost-struct.rs  simple-into-proto-enum.rs  simple-into-proto-struct.rs  tests.rs
