[package]
name = "prost-dto-core"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
chrono = { version = "0.4", features = [ "serde", "clock", "std", ], default-features = false }
darling = "0.20"
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["extra-traits", "printing"] }

[dev-dependencies]
pretty_assertions = "1.3"
syn = { version = "2.0", features = ["extra-traits", "full", "parsing"] }
