[package]
name = "prost-dto-derive"
authors.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
proc-macro = true

[dependencies]
# Internal Dependencies
prost-dto-core = { workspace = true }

proc-macro2 = { workspace = true }
syn = { workspace = true }
